# gateway

./: .gitignore  LICENSE  Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yaml  pull-request.yaml  push.yaml
api/v1/: sekura.proto
cmd/agent/: main.go
cmd/aio/: main.go
cmd/ui/: main.go
gateway/: Dockerfile  go.mod  go.sum
gateway/cmd/agent/: main.go
gateway/cmd/aio/: main.go
gateway/cmd/login/: main.go
gateway/cmd/ui/: main.go
gateway/pkg/gateway/: handler.go  server.go
gateway/pkg/sekura/v1/: sekura.pb.go  sekura.pb.gw.go  sekura_grpc.pb.go
pkg/gateway/: handler.go
sekura/v1/: sekura.proto
sekuraapi/v1/: sekura.proto  tables.md
templates/gomodule/: go.mod
templates/mainpage/: README.md  index.html
