[tool.poetry]
name = "sekura-api"
version = "0.1.0"
description = "Free security"
authors = ["Miguel Angel Garcia <miguelangel.garcia@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
psycopg2 = "^2.9.5"
pytz = "^2022.6"
redis = "^4.3.4"
celery = "^5.2.7"
flower = "^1.2.0"
PyGithub = "^1.56"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
factory-boy = "^3.2.1"
Faker = "^15.2.0"
requests = "^2.28.1"
grpclib = "^0.4.3"
grpcio-tools = "^1.51.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
