[tool.poetry]
name = "sekura-api"
version = "0.1.0"
description = "Free security"
authors = ["Miguel Angel Garcia <miguelangel.garcia@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {extras = ["compiler"], version = "^1.2.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
